--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ astroid==2.4.2
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
+colorama==0.4.3
 distlib==0.3.1
 filelock==3.0.12
-colorama==0.4.3
 Flask==1.1.2
 Flask-Cors==3.0.8
 idna==2.10
@@ -14,6 +14,7 @@ Jinja2==2.11.2
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
+mysqlclient @ file:///C:/Users/RD/Desktop/broker/env/Lib/site-packages/mysqlclient-1.4.6-cp38-cp38-win32.whl
 pylint==2.5.3
 requests==2.24.0
 six==1.15.0
