--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 astroid==2.4.2
+autopep8==1.5.4
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
@@ -14,6 +15,8 @@ Jinja2==2.11.2
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
+psutil==5.7.2
+pycodestyle==2.6.0
 pylint==2.5.3
 requests==2.24.0
 six==1.15.0
