--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 astroid==2.4.2
-autopep8==1.5.4
 certifi==2020.6.20
+cffi==1.14.2
 chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
+cryptography==3.1
 distlib==0.3.1
 filelock==3.0.12
 Flask==1.1.2
@@ -15,13 +16,18 @@ Jinja2==2.11.2
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
+mysqlclient @ file:///C:/Users/RD/Desktop/broker/env/Lib/site-packages/mysqlclient-1.4.6-cp38-cp38-win32.whl
+ntlm-auth==1.5.0
 psutil==5.7.2
-pycodestyle==2.6.0
+pycparser==2.20
 pylint==2.5.3
+pywinrm==0.4.1
 requests==2.24.0
+requests-ntlm==1.1.0
 six==1.15.0
 sockets==1.0.0
 toml==0.10.1
 urllib3==1.25.10
 Werkzeug==1.0.1
 wrapt==1.12.1
+xmltodict==0.12.0
