--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ psutil==5.7.2
 pycparser==2.20
 pylint==2.5.3
 pywinrm==0.4.1
+paramiko==2.7.2
 requests==2.24.0
 requests-ntlm==1.1.0
 six==1.15.0
