--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "python.dataScience.jupyterServerURI": "local",
     "python.autoComplete.extraPaths": ["//server"
 
-    ]
+    ],
+    "jupyter.jupyterServerType": "local"
 }
