--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    "python.dataScience.jupyterServerURI": "local",
-    "python.autoComplete.extraPaths": ["//server"
+    "python.autoComplete.extraPaths": [
+        "//server"
 
     ],
     "jupyter.jupyterServerType": "local"
